# ellipsis-client

crates/: Cargo.toml
crates/ellipsis-client/: Cargo.toml
