[workspace]
resolver = "2"
members = ["ellipsis-client", "transaction-utils"]

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[workspace.dependencies]
anyhow = "*"
assert_matches = "*"
async-trait = "*"
backoff = { version = "*", features = ["tokio"] }
base64 = "*"
bincode = "*"
borsh = "*"
bs58 = "*"
chrono-humanize = "*"
crossbeam-channel = "*"
futures = "*"
itertools = "*"
lazy_static = "*"
log = "*"
serde = "*"
solana-banks-client = "*"
solana-bpf-loader-program = "*"
solana-client = "*"
solana-logger = "*"
solana-program = "*"
solana-program-runtime = "*"
solana-runtime = "*"
solana-sdk = "*"
solana-send-transaction-service = "*"
solana-transaction-status = "*"
solana-vote-program = "*"
tarpc = { version = "*", features = ["full"] }
thiserror = "*"
tokio = { version = "*", features = ["macros"] }
tokio-serde = { version = "*", features = ["bincode"] }
tracing = { version = "*", features = ["log"] }
yellowstone-grpc-client = "*"
yellowstone-grpc-proto = "*"
